src/test/resources/scripts/language/parser/invalid/syntax/danglingCloseBrace.sbsc
// Parser should fail if there is a dangling closing brace.

{
    println("bazinga");
}}

return false;